# battlemetrics

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  banlist.py  banlistinvite.py  bans.py  battlemetrics.py  changes.txt  commandsactivity.py  coplay.py  datapoint.py  example.json  example.py  example_ban.py  flagplayer.py  flags.py  game.py  game_info.py  gamefeatures.py  helpers.py  leaderboard.py  notes.py  organization.py  organizationfriend.py  organizationstats.py  player.py  playernote.py  pyproject.toml  relatedplayeridentifier.py  server.py  session.py  setup.py  test.py  utility.py
.github/: FUNDING.yml
.github/workflows/: lint.yml
battlemetrics/: __init__.py  battlemetrics.py  client.py  errors.py  http.py  misc.py  note.py  state.py  utils.py
battlemetrics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
battlemetrics/components/: banlist.py  bans.py  flags.py  gameinfo.py  helpers.py  notes.py  organization.py  player.py  server.py  session.py
battlemetrics/types/: note.py
categories/: banlist.py  banlistexemption.py  gamefeatureoptions.py  leaderboard.py  nativeban.py  organization.py  organizationstats.py  playerflag.py  server.py
classes/: bans.py  datapoint.py  flags.py  game.py  helpers.py  leaderboard.py  notes.py  organization.py  other.py  player.py  server.py  session.py  utility.py
components/: banlist.py  bans.py  flags.py  game_info.py  helpers.py  notes.py  organization.py  player.py  server.py  session.py
documentation/: documentation.md
examples/: example.py
