[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "battlemetrics"
description = "Battlemetrics API wrapper."
version = "2.0"
authors = [{ name = "Gnomeslayer", email = "declan.otten@live.com.au" }]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["battlemetrics", "battlemetricsapi", "api", "gaming"]
dependencies = ["aiohttp==3.9.3"]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/Gnomeslayer/battlemetrics"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"


[tool.ruff]
line-length = 100
lint.select = ["ALL"]
lint.ignore = [
    "ERA001", # commented out code.
    "D100",   # docstrings in public modules.
    "D104",   # docstrings in public package.
    "ANN101", # self type hint.
]

[tool.ruff.lint.per-file-ignores]
"battlemetrics/__init__.py" = [
    "F403", # Wildcard imports
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
